environments/permanent/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: displayscreen
  labels:
    app.kubernetes.io/name: displayscreen
    app.kubernetes.io/part-of: spc
