environments/permanent/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spc-displayscreen
  namespace: displayscreen
  labels:
    app.kubernetes.io/name: displayscreen
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: displayscreen
  template:
    metadata:
      labels:
        app.kubernetes.io/name: displayscreen
    spec:
      containers:
        - name: displayscreen
          image: ghcr.io/simonbrundin/spc-displayscreen:v1.0.3
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/images
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/images
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
