environments/permanent/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spc-displayscreen-service
  namespace: displayscreen
  labels:
    app.kubernetes.io/name: displayscreen
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: displayscreen
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
